[project]
name = "silx-datastructs"
version = "0.2.0"
description = "Data structures for communicating between systems"
readme = "README.md"
authors = [
    { name = "Michael Samsom", email = "michael@silx.ca" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "pydantic>=2.9.2",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
